# freetype_opencv

opencv_putext_zh/: CMakeLists.txt  Chinese_test.cpp  main.cpp  symbol_test.cpp
